--- a/web/styles.css
+++ b/web/styles.css
@@ -1,36 +1,42 @@
 button {
-    -webkit-border-radius: 6;
-    -moz-border-radius: 6;
     border-radius: 6px;
-    font-family: Courier New;
     color: #000000;
-    font-size: 20px;
-    background: #ffffff;
-    padding: 10px 20px 10px 20px;
-    border: solid #ff7373 2px;
+    font-size: 16px;
+    background-color: #ffffff;
+    padding: 4px 8px 4px 8px;
+    border: 2px solid #ff7373;
     text-decoration: none;
 }
 
-button:hover, button:active {
-    background: #546ff2;
-    text-decoration: none;
+button:hover {
+    background-color: #546ff2;
+}
+
+button:active {
+    background-color: #546ff2;
 }
 
 button:disabled {
-    background: #cccccc;
+    background-color: #cccccc;
 }
 
-.controls button {
-    padding: 4px 8px 4px 8px;
-    font-size: 16px;
-}
-
-.controls {
+.holmeControl {
     display: flex;
     flex-direction: row;
 }
 
-.control-group {
+.holmeControlGroup {
     display: flex;
     flex-direction: column;
+}
+
+.holmeVotesGroup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.holmeVotesGroup > button {
+    width: 80%;
+    margin-top: 10%;
 }
