--- a/web/styles.css
+++ b/web/styles.css
@@ -1,19 +1,22 @@
 button {
-    border-radius: 6px;
-    color: #000000;
+    color: #ffffff;
     font-size: 16px;
-    background-color: #ffffff;
+    background-color: #000000;
     padding: 4px 8px 4px 8px;
-    border: 2px solid #ff7373;
+    height: 100px;
     text-decoration: none;
+    font-family: Lucida Console, Monaco, monospace;
+    font-size: 2em;
 }
 
 button:hover {
-    background-color: #546ff2;
+    background-color: #ffffff;
+    color: #000000;
 }
 
 button:active {
-    background-color: #546ff2;
+    background-color: #ffffff;
+    color: #000000;
 }
 
 button:disabled {
